[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-kb"
version = "0.1.0"
description = "Daedalus agentic knowledge-base bootstrap tools"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "OpenCode" }
]
dependencies = [
  "jsonschema>=4.10,<5",
  "PyYAML>=6,<7",
  "psycopg[binary]>=3.2,<4",
  "tree-sitter>=0.25,<0.26",
  "tree-sitter-language-pack>=1.3,<2"
]

[project.scripts]
agentic-kb = "agentic_kb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
agentic_kb = ["config/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
