name:                cardano-installer
version:             0.1.0.0
synopsis:            Cardano Installer
description:         Please see README.md
license:             MIT
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 IOHK
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable make-installer
  main-is:             Installer.hs
  other-modules:       MacInstaller
                     , WindowsInstaller
                     , RewriteLibs
  build-depends:       Glob
                     , aeson
                     , base
                     , bytestring
                     , directory
                     , filepath
                     , megaparsec
                     , nsis
                     , temporary
                     , text
                     , turtle
                     , split
                     , universum
                     , yaml

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2
  default-extensions: NoImplicitPrelude
                      OverloadedStrings
