name:                cardano-installer
version:             0.1.0.0
synopsis:            Cardano Installer
description:         Please see README.md
license:             MIT
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 IOHK
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable make-installer
  main-is:             Installer.hs
  other-modules:       MacInstaller
                     , WindowsInstaller
                     , RewriteLibs

  build-depends:       base
                     , bytestring
                     , containers
                     , dhall
                     , dhall-json
                     , directory
                     , filepath
                     , Glob
                     , megaparsec
                     , nsis
                     , optparse-applicative
                     , optparse-generic
                     , optional-args
                     , split
                     , system-filepath
                     , temporary
                     , temporary
                     , text
                     , trifecta
                     , turtle
                     , universum
                     , yaml

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                      OverloadedStrings

executable load-certificate
  main-is:             load-certificate.hs
  other-modules:       MacInstaller
  build-depends:       base
                     , bytestring
                     , containers
                     , dhall
                     , dhall-json
                     , directory
                     , filepath
                     , Glob
                     , megaparsec
                     , optparse-applicative
                     , optional-args
                     , split
                     , system-filepath
                     , text
                     , trifecta
                     , turtle
                     , universum
                     , yaml

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                      OverloadedStrings
