name:                daedalus-installer
version:             0.1.0.0
synopsis:            Daedalus Installer Builder
description:         Please see README.md
license:             MIT
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 IOHK
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:   Types
                   , Config
                   , WindowsInstaller
                   , MacInstaller
                   , RewriteLibs
                   , AppVeyor
                   , Util
  ghc-options:         -Wextra -Wno-unused-do-bind -Werror
                       -fno-warn-orphans
                       -O2
  default-language:    Haskell2010
  hs-source-dirs:    common
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , dhall
                     , dhall-json
                     , directory
                     , Glob
                     , github
                     , lens-aeson
                     , megaparsec
                     , microlens
                     , nsis
                     , network-uri
                     , optional-args
                     , system-filepath
                     , text
                     , turtle
                     , universum
                     , wreq
                     , yaml
                     , zip-archive

executable make-installer
  main-is:             Installer.hs
  build-depends:       base
                     , bytestring
                     , containers
                     , directory
                     , foldl
                     , filepath
                     , optparse-applicative
                     , optparse-generic
                     , optional-args
                     , split
                     , system-filepath
                     , temporary
                     , text
                     , turtle
                     , universum
                     , daedalus-installer

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                      OverloadedStrings


Test-Suite test-make-installer
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  build-depends:       base
                     , hspec
                     , aeson
                     , bytestring
                     , containers
                     , dhall
                     , dhall-json
                     , directory
                     , foldl
                     , filepath
                     , managed
                     , megaparsec
                     , optparse-applicative
                     , optparse-generic
                     , optional-args
                     , split
                     , system-filepath
                     , temporary
                     , temporary
                     , text
                     , turtle
                     , universum
                     , yaml
                     , daedalus-installer
                     , lens-aeson

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                      OverloadedStrings

executable load-certificate
  main-is:             load-certificate.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , dhall
                     , dhall-json
                     , directory
                     , filepath
                     , megaparsec
                     , optparse-applicative
                     , optional-args
                     , split
                     , system-filepath
                     , temporary
                     , text
                     , turtle
                     , universum
                     , yaml
                     , daedalus-installer

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                      OverloadedStrings
