name:                daedalus-installer
version:             0.1.0.0
synopsis:            Daedalus Installer Builder
description:         Please see README.md
license:             MIT
author:              Input Output HK
maintainer:          IOHK DevOps <devops@iohk.io>
copyright:           2018 IOHK
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   Types
                   , Config
                   , WindowsInstaller
                   , MacOSPackageSigning
                   , MacInstaller
                   , RewriteLibs
                   , AppVeyor
                   , Util
  build-depends:       aeson
                     , Glob
                     , base
                     , bytestring
                     , containers
                     , dhall
                     , dhall-json
                     , directory
                     , github
                     , lens-aeson
                     , megaparsec
                     , microlens
                     , network-uri
                     , nsis
                     , optional-args
                     , system-filepath
                     , text
                     , turtle
                     , universum
                     , wreq
                     , yaml
                     , zip-archive
  ghc-options:         -Wextra -Wno-unused-do-bind -Werror
                       -fno-warn-orphans
                       -O2
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , LambdaCase
                    , RecordWildCards

executable make-installer
  main-is:             make-installer.hs
  hs-source-dirs:      exe
  build-depends:       base
                     , bytestring
                     , directory
                     , filepath
                     , optparse-applicative
                     , split
                     , system-filepath
                     , text
                     , turtle
                     , universum
                     , daedalus-installer

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , LambdaCase
                    , RecordWildCards

executable generate-launcher-config
  main-is:             generate-launcher-config.hs
  hs-source-dirs:      exe
  build-depends:       base
                     , turtle
                     , universum
                     , daedalus-installer

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , LambdaCase
                    , RecordWildCards

executable sign-macos-installer
  main-is:             sign-macos-installer.hs
  hs-source-dirs:      exe
  build-depends:       base
                     , turtle
                     , universum
                     , daedalus-installer

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , LambdaCase
                    , RecordWildCards

executable darwin-rewrite-libs
  main-is:             darwin-rewrite-libs.hs
  hs-source-dirs:      exe
  build-depends:       base
                     , system-filepath
                     , turtle
                     , universum
                     , daedalus-installer

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , LambdaCase
                    , RecordWildCards

test-suite test-make-installer
  buildable:         False
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:       base
                     , hspec
                     , aeson
                     , bytestring
                     , containers
                     , dhall
                     , dhall-json
                     , directory
                     , foldl
                     , filepath
                     , managed
                     , megaparsec
                     , optparse-applicative
                     , optparse-generic
                     , optional-args
                     , split
                     , system-filepath
                     , temporary
                     , temporary
                     , text
                     , turtle
                     , universum
                     , yaml
                     , daedalus-installer
                     , lens-aeson

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , LambdaCase
                    , RecordWildCards

executable load-certificate
  main-is:             exe/load-certificate.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , containers
                     , dhall
                     , dhall-json
                     , directory
                     , filepath
                     , megaparsec
                     , optparse-applicative
                     , optional-args
                     , split
                     , system-filepath
                     , temporary
                     , text
                     , turtle
                     , universum
                     , yaml
                     , daedalus-installer

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wall -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , LambdaCase
                    , RecordWildCards
