name:                daedalus-installer
version:             0.1.0.0
synopsis:            Daedalus Installer Builder
description:         Please see README.md
license:             Apache-2.0
author:              IOHK
maintainer:          DevOps <devops@iohk.io>
copyright:           2019 IOHK
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:   Types
                   , Config
                   , WindowsInstaller
                   , MacInstaller
                   , RewriteLibs
                   , AppVeyor
                   , Util
  ghc-options:         -Wextra -Wno-unused-do-bind -Werror
                       -fno-warn-orphans
                       -O2
  default-language:    Haskell2010
  hs-source-dirs:    common
  build-depends:       aeson
                     , Glob
                     , base
                     , bytestring
                     , unordered-containers
                     , containers
                     , directory
                     , github
                     , lens-aeson
                     , megaparsec
                     , microlens
                     , network-uri
                     , nsis
                     , optional-args
                     , system-filepath
                     , text
                     , turtle
                     , universum
                     , wreq
                     , yaml
                     , zip-archive

executable make-installer
  main-is:             Installer.hs
  build-depends:       base
                     , bytestring
                     , containers
                     , daedalus-installer
                     , directory
                     , filepath
                     , foldl
                     , optional-args
                     , optparse-applicative
                     , optparse-generic
                     , split
                     , system-filepath
                     , temporary
                     , text
                     , turtle
                     , universum
                     , yaml

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                      OverloadedStrings


test-suite test-make-installer
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  build-depends:       daedalus-installer
                     , base
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , foldl
                     , github
                     , hspec
                     , lens-aeson
                     , managed
                     , megaparsec
                     , optional-args
                     , optparse-applicative
                     , optparse-generic
                     , split
                     , system-filepath
                     , temporary
                     , temporary
                     , text
                     , turtle
                     , universum
                     , yaml

  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
                       -Wextra -Wno-unused-do-bind
                       -fno-warn-orphans
                       -with-rtsopts=-N
                       -O2

  default-extensions: NoImplicitPrelude
                      OverloadedStrings
