[package]
name = "cardano-watchdog"
version = "0.1.0"
edition = "2021"
description = "Independent process supervisor for cardano-node and cardano-wallet"

[[bin]]
name = "cardano-watchdog"
path = "src/main.rs"

[[bin]]
name = "mock-node"
path = "src/bin/mock_node.rs"

[[bin]]
name = "mock-wallet"
path = "src/bin/mock_wallet.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["process", "signal"] }
libc = "0.2"
